Change Mobile UI

--- a/ipu/dstatic/account/auth.css
+++ b/ipu/dstatic/account/auth.css
@@ -1,12 +1,16 @@
-html {
+
+@media (min-width:300px) and (orientation: landscape){
+
+  html {
     height: 100%;
     background: url("images/2.jpg") no-repeat center fixed;
     background-size: cover;
+    font-size: 12px;
 }
 
 
 body {
-    min-height: 100%;
+    min-height: 110%;
     background: rgba(0, 0, 0, 0.7);
     padding: 50px;
     padding-bottom: 0px;
@@ -14,37 +18,46 @@ body {
 
 .navbar-fixed
 {
-	height: 0px;
+  height: 0px;
 }
 
 main
 {
     align-items: center;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
     padding: 10px;
 }
 main img
 {
-	margin-bottom: 0px;
+  margin-bottom: 0px;
+  position: relative;
+  top: -40px;
+  height: 80px;
+  width: 95px;
 }
 
 #heading
 {
   color: white;
+  font-size: 20px;
+  position: relative;
+  top: -50px;
 }
 
 #form-box
 {
-	background-color: white;
-	display: flex;
-	flex-direction: column;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
   transition: box-shadow .25s;
-	height: 366px;
+  height: 310px;
   border-radius: 7px;
   width: 40%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  position: relative;
+  top: -60px;
 }
 
 #student-signup-mainbox
@@ -86,7 +99,219 @@ main img
 {
   box-shadow: none;
   margin: 0;
+  font-size: 10px;
+  padding-bottom: 0px;  
+
+   
+}
+
+#corner-buttons {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    left: 5%;
+    width: 90%;
+
+}
+
+#corner-buttons-small {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    display: flex;
+    justify-content: space-between;
+    left: 5%;
+    width: 90%;
     
+}
+
+#corner-buttons a{
+    margin: 4px;
+
+}
+
+#corner-buttons-small a{
+    margin: 4px;
+    font-size: 10px;
+    line-height: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#student-login-btn
+{
+  width: 100%;
+  font-weight: bold;
+}
+
+#login-btn
+{
+  width: 100%;
+  font-weight: bold;
+}
+
+
+
+
+
+.black_overlay{
+      display: none;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      opacity: 0.7;
+      z-index:1001;
+
+    }
+.white_content {
+      display: none;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 5%;
+      left: 15%;
+      width: 70%;
+      height: 90%;
+      padding: 10px;
+      border: 1px solid white;
+      background-color: white;
+      z-index:1002;
+      overflow: auto;
+      color: black;
+      border-radius: 2%;
+    }
+.white_content #cross
+    {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        color: black;
+    }
+
+    .white_content h4
+    {
+      color: #337ab7;
+    }
+
+    #back
+    {
+      position: absolute;
+      top: 200px;
+      left: 10px;
+    }
+
+}
+
+@media (min-width:992px){
+
+  html {
+    height: 100%;
+    background: url("images/2.jpg") no-repeat center fixed;
+    background-size: cover;
+    font-size: 15px;
+}
+
+
+body {
+    min-height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 50px;
+    padding-bottom: 0px;
+}
+
+.navbar-fixed
+{
+  height: 0px;
+}
+
+main
+{
+    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+    padding: 10px;
+}
+main img
+{
+  margin-bottom: 0px;
+  position: relative;
+  top: 0px;
+  height: 110px;
+  width: 135px;
+}
+
+#heading
+{
+  color: white;
+  font-size: 35px;
+  position: relative;
+  top: 0px;
+}
+
+#form-box
+{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  transition: box-shadow .25s;
+  height: 350px;
+  border-radius: 7px;
+  width: 40%;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  position: relative;
+  top: 0px;
+}
+
+#student-signup-mainbox
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#student-signup-box
+{
+  width: 100%;
+}
+
+#recruiter-signup-mainbox
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#recruiter-signup-box
+{
+  width: 100%;
+}
+
+
+.tabs .tab a {
+    color: #26a69a;
+}
+
+.tabs .indicator {
+   
+    background-color: #26a69a;
+    width: 50%;  
+}
+
+.card-panel
+{
+  box-shadow: none;
+  margin: 0;
+  font-size: 12px;
+  padding-bottom: 0px;  
 
    
 }
@@ -182,59 +407,288 @@ main img
         color: black;
     }
 
-@media screen and (max-width: 992px) {
+    #back
+    {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
+}
+
+@media (min-width:300px) and (orientation: portrait){
+
+  html {
+    height: 100%;
+    background: url("images/2.jpg") no-repeat center fixed;
+    background-size: cover;
+}
+
+
+body {
+    min-height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 30px;
+    padding-bottom: 0px;
+}
+
+.navbar-fixed
+{
+  height: 0px;
+}
+
+main
+{
+    align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+    padding: 10px;
+    margin-top: 200px;
+}
+main img
+{
+  margin-bottom: 0px;
+  height: 190px;
+  width: 215px;
+}
+
+#heading
+{
+  color: white;
+  font-size: 60px;
+}
+
+#form-box
+{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  transition: box-shadow .25s;
+  height: 600px;
+  border-radius: 7px;
+  width: 80%;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+#form-box .row
+{
+  width: 100%;
+}
+
+
+#student-signup-mainbox
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
-  .white_content {
+}
+
+#student-signup-box
+{
+  width: 100%;
+}
+
+#recruiter-signup-mainbox
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#recruiter-signup-box
+{
+  width: 100%;
+}
+
+.tabs
+{
+  height: 60px;
+}
+
+
+.tabs .tab a {
+    color: #26a69a;
+    font-size: 30px;
+}
+
+#form-box .input-field label.active {
+    font-size: 1.8rem;
+    transform: translateY(-140%);
+    margin-top: 10px;
+}
+
+.tabs .indicator {
+   
+    background-color: #26a69a;
+    width: 50%;
+    height: 4px;
+}
+
+.card-panel
+{
+  box-shadow: none;
+  margin: 0;
+  font-size: 15px;
+  padding-bottom: 0px;  
+
+   
+}
+
+#student-login-div form .row
+{
+   margin-bottom: 10px;
+   margin-top: 10px;
+   padding: 5px;
+}
+
+#login-div form .row
+{
+   margin-bottom: 10px;
+   margin-top: 10px;
+   padding: 5px;
+}
+
+
+#test1 .row
+{
+  height: 150px;
+  font-size: 20px;
+}
+
+#test1 .col
+{
+  font-size: 20px;
+}
+
+#test2 .row
+{
+  height: 150px;
+  font-size: 20px;
+}
+
+#test2 .col
+{
+  font-size: 20px;
+}
+
+#corner-buttons {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    left: 5%;
+    width: 90%;
+
+}
+
+#corner-buttons-small {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    display: flex;
+    justify-content: space-between;
+    left: 5%;
+    width: 90%;
+    
+}
+
+#corner-buttons a{
+    margin: 5px;
+    width: 380px;
+    height: 60px;
+    font-size: 25px;
+    line-height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#corner-buttons-small a{
+    margin: 5px;
+    font-size: 50px;
+    line-height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+#student-login-btn
+{
+  width: 100%;
+  font-weight: bold;
+  height: 75px;
+  font-size: 35px;
+}
+
+#login-btn
+{
+  width: 100%;
+  font-weight: bold;
+  height: 75px;
+  font-size: 35px;
+}
+
+
+
+
+
+.black_overlay{
+      display: none;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      opacity: 0.7;
+      z-index:1001;
+
+    }
+.white_content {
       display: none;
       justify-content: center;
       align-items: center;
       position: absolute;
-      top: 1%;
-      left: 1%;
-      width: 98%;
-      height: 98%;
+      top: 18%;
+      left: 10%;
+      width: 80%;
+      height: 64%;
       padding: 10px;
       border: 1px solid white;
       background-color: white;
       z-index:1002;
       overflow: auto;
       color: black;
+      border-radius: 2%;
+    }
+.white_content #cross
+    {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        color: black;
     }
 
-    #form-box
-{
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-  transition: box-shadow .25s;
-	height: 366px;
-  border-radius: 7px;
-  min-width: 60%;
-  margin-left: 20%;
-  margin-right: 20%;
+    .white_content h4
+    {
+      color: #337ab7;
+    }
 
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-}
 
-@media screen and (max-width: 600px) {
-     
-
-    #form-box
-{
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-  transition: box-shadow .25s;
-	height: 366px;
-  border-radius: 7px;
-  min-width: 99%;
-  margin-left: .5%;
-  margin-right: .5%;
-
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
+   #back
+    {
+      position: absolute;
+      top: 20px;
+      left: 10px;
+      height: 50px;
+      width: 50px;
+    } 
 
 }
-
-
