--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -12,7 +12,8 @@
 
 {% block content %}
 
-<a id="back" href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+<a id="back" href="/"><i class="fa fa-arrow-left fa-2x hide-on-small-only hide-on-med-only" aria-hidden="true"></i></a>
+<a id="back" href="/"><i class="fa fa-arrow-left fa-4x hide-on-large-only" aria-hidden="true"></i></a>
 
 <div class="black_overlay" id="fade"></div>
 
@@ -28,16 +29,23 @@
 </div>
 
 <div id="student-sign-up" class="white_content"> 
-       <a href = "javascript:void(0)" onclick = "document.getElementById('student-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
+       <a class="hide-on-med-only hide-on-small-only" href = "javascript:void(0)" onclick = "document.getElementById('student-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
        </a>
-       <div class="row" id="student-signup-mainbox">
+       <a class="hide-on-large-only" href = "javascript:void(0)" onclick = "document.getElementById('student-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-4x" id="cross"></i>
+       </a>
+  <div class="row" id="student-signup-mainbox">
 			<div class="col s12 m8 l6" id="student-signup-box">
 				<div class="card-panel">
 					<h4> Student Signup </h4>
 					<div id="student-signup-div">
 						<form method="POST" action="{% url 'student_signup' %}" id="student-signup-form">
 							{% csrf_token %}
-							{% form form=student_signup_form %}{% endform %}
+							{% form form=student_signup_form %}
+              {% part form.username prefix %}<i class="material-icons prefix">account_box</i>{% endpart %}
+              {% part form.email prefix %}<i class="material-icons prefix">email</i>{% endpart %}
+              {% part form.password1 prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+              {% part form.password2 prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+              {% endform %}
 							<div class="row">
 								<div class="col s12">
 									<br>
@@ -54,8 +62,10 @@
  </div>
     <!--for for recruiter sign up-->
     <div id="recruiter-sign-up" class="white_content"> 
-       <a href = "javascript:void(0)" onclick = "document.getElementById('recruiter-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
+       <a class="hide-on-small-only hide-on-med-only" href = "javascript:void(0)" onclick = "document.getElementById('recruiter-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-2x" id="cross"></i>
        </a>
+      <a class="hide-on-large-only" href = "javascript:void(0)" onclick = "document.getElementById('recruiter-sign-up').style.display='none';document.getElementById('fade').style.display='none'"><i class="fa fa-times fa-4x" id="cross"></i>
+       </a> 
        <div class="row" id="recruiter-signup-mainbox">
 				<div class="col s12 m8 l6" id="recruiter-signup-box">
 					<div class="card-panel">
@@ -63,7 +73,12 @@
 						<div id="signup-div">
 							<form method="POST" action="{% url 'company_signup' %}" id="signup-form">
 								{% csrf_token %}
-								{% form form=signup_form %}{% endform %}
+								{% form form=signup_form %}
+                {% part form.username prefix %}<i class="material-icons prefix">account_box</i>{% endpart %}
+                {% part form.email prefix %}<i class="material-icons prefix">email</i>{% endpart %}
+                {% part form.password1 prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+                {% part form.password2 prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+                {% endform %}
 								<div class="row">
 									<div class="col s12">
 										<br>
@@ -80,9 +95,7 @@
     </div>
 
 
-   <img src="{% static 'account/images/ipu-logo.png' %}" class="hide-on-small-only" height="150px" width="180px">
-
-   <img src="{% static 'account/images/ipu-logo.png' %}" class="hide-on-med-only hide-on-large-only" height="100px" width="120px">
+   <img src="{% static 'account/images/ipu-logo.png' %}">
    <h4 id="heading">LOGIN</h4>
 
       <div id="form-box">
@@ -100,7 +113,12 @@
                             <div id="student-login-div">
                               <form method="POST" action="{% url 'student_login' %}" id="student-login-form">
                                 {% csrf_token %}
-                                {% form form=student_login_form %}{% endform %}
+                                {% form form=student_login_form %}
+
+                                {% part form.username prefix %}<i class="material-icons prefix">account_box</i>{% endpart %}
+                                {% part form.password prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+
+                                {% endform %}
                                  <div class="col s6">
                                     <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
                                   </div>
@@ -124,7 +142,10 @@
                             <div id="login-div">
                               <form method="POST" action="{% url 'login' %}" id="login-form">
                                 {% csrf_token %}
-                                {% form form=login_form %}{% endform %}
+                                {% form form=login_form %}
+                                {% part form.username prefix %}<i class="material-icons prefix">account_box</i>{% endpart %}
+                                {% part form.password prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+                                {% endform %}
                                 <div class="col s6">
                                     <a href="{% url 'forgot_password' %}"> Forgot Password? </a>
                                   </div>
