--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -5,7 +5,6 @@
     <head>
             {% include 'material/includes/material_css.html' %}
             <link type="text/css" rel="stylesheet" href="{% static 'css/font-awesome/css/font-awesome.min.css' %}" />
-            <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
             <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,9 +38,9 @@
         <ul id="dropdown1" class="dropdown-content">
             <li id="corner_dropdown">
                 <a href="#!" data-links="settings" id="img-box">
-                    <img src="{% block user_photo %}{% endblock %}" class="circle" height="90" width="90">
-                    <span id="corner_name" class="black-text">{% block user_name_card %}{% endblock %}</span>
-                    <span id="corner_email" class="grey-text lighten-1">{% block user_email_id %}{% endblock %}</span>
+                    <img src="{% block user_photo_s %}{% endblock %}" class="circle" height="90" width="90">
+                    <span id="corner_name" class="black-text">{% block user_name_card_s %}{% endblock %}</span>
+                    <span id="corner_email" class="grey-text lighten-1">{% block user_email_id_s %}{% endblock %}</span>
                 </a>
             </li>
             <li class="divider"></li>
@@ -63,14 +62,15 @@
             <!--every li here represents a notifcations. header and body for notifications repectively-->     
     
         </ul>
-<!--Search box for tab and mobile view-->
+<!--Search box-->
         <div id="light" class="white_content"> 
          <div id="box-search">
-            <form id="search">
+            <form id="search-line">
                             <input type="text" name="q" placeholder="Search for Students, Colleges, and Companies..." />
+                            <ul id="results"></ul>
             </form>
          </div>   
-            <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none'; document.getElementById('fade').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
+            <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none'; document.getElementById('fade').style.display='none'; "><i class="fa fa-times fa-3x"></i></a>
         </div>
         <div id="fade" class="black_overlay"></div>
 
@@ -78,42 +78,91 @@
         <div class="navbar-fixed">
             <nav id="nav-bar">
                 <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo left hide-on-small-only">Training & Placement Cell</a>
-                    <a href="#!" class="brand-logo left hide-on-large-only hide-on-med-only">TPC</a>
+                    <a href="#!" class="brand-logo left hide-on-med-and-down">Training & Placement Cell</a>
+                    <a id="center_logo" href="#!" class="brand-logo center hide-on-large-only">Training & Placement Cell</a>
                     <ul class="right">
-                    <li class="center hide-on-med-and-down">
-                    <!--materialize search-bar-->
-					    <form id="search">
-                            <input type="text" name="q" placeholder="Search for Students, Colleges, and Companies..." />
-                            <ul id="results"></ul>
-                        </form>
-                    </li>
-                   	<li class="hide-on-large-only"><a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
+                   	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
                   	</li>
-                  	<li>
+                  	<li class="hide-on-med-and-down">
                     	<a id = 'notification_button' class="dropdown-button tooltipped" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="{% url 'get_notifications' %}" data-activates="dropdown3" data-position="left" data-delay="20" data-tooltip="Notifications"><i class="material-icons">add_alert</i></a>
                   </li>
 
-                  <li>
+                  <li class="hide-on-med-and-down">
                   		<a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown2"><i class="material-icons">menu</i></a>
                   </li>   
-                  <li>
+                  <li class="hide-on-med-and-down">
                     	<a class="dropdown-button" data-constrainwidth="false" data-beloworigin="true" data-gutter="10" href="" data-activates="dropdown1"><img src="{% block user_photo2 %}{% endblock %}" class="circle" id="img-corner"></a>
                   </li>
                     
               </ul>
-           
+
+              <ul class="left hide-on-large-only">
+                
+                <li>
+                  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+                </li>
+
+              </ul>
+            
             </div>
         </nav>
       </div> 
 
 <!--navbar ends-->
 
+<!--sidebar begins-->
+ 
+ <ul id="slide-out" class="side-nav">
+    <li><div class="userView">
+      <div class="background">
+        <img src="{% static 'images/bgs2.jpg' %}" width="100%">
+      </div>
+      <a href="#!user"><img class="circle" src="{% block user_photo %}{% endblock %}"></a>
+      <a href="#!name"><span class="white-text name">{% block user_name_card %}{% endblock %}</span></a>
+      <a href="#!email"><span class="white-text email">{% block user_email_id %}{% endblock %}</span></a>
+    </div></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>
+          Update Profile</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-book" aria-hidden="true"></i> 
+          Update Qualifications</a></li>  
+    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
+          Companies Visiting</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+            Sessions</a></li>
+    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>
+    </div>
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
+            Settings</a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
+                    Account Settings</a></li>
+                <li><a href="#!"><i class="fa fa-upload" aria-hidden="true"></i>
+                  Upload Image/Resume</a></li>
+                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
+                      Social Profile Settings</a></li>
+                <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
+                  Technical Profile Settings</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
+      <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Logout</a></li>
+  </ul>
+
+<!--sidebar ends-->
+
+
+
         <main>
             <!--Tabs bar begins--> 
             <div id="tab-bar">
                 <div class="row">
-                    <div class="col s12">
+                    <div class="col s12 hide-on-med-and-down">
                         <ul class="tabs">
                             <!--naming for tabs-->
                             {% block tabs %}
@@ -142,7 +191,12 @@
           	        $('.dropdown-button').on('click', function(e){e.preventDefault()});
       				$('nav .brand-logo').on('click', function(e){location.href='';});
             		GetNotification.init();
-      			});
+                $('.button-collapse').sideNav({
+      menuWidth: 240, 
+      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+    }
+  );
+      	});
 		
 		// Mapping dropdown links to tabs
 		    $('#dropdown1 a').each(function(i, a){
